// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`removeBranchProtection removes branch protection on master by default 1`] = `
Array [
  Array [
    Object {
      "branch": "master",
      "owner": "JasonEtco",
      "repo": "example",
    },
  ],
]
`;

exports[`removeBranchProtection removes branch protection on the provided branch 1`] = `
Array [
  Array [
    Object {
      "branch": "a-branch",
      "owner": "JasonEtco",
      "repo": "example",
    },
  ],
]
`;
